<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/AII"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/aii"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/aii" />
    <!--Displaying Anjuman-i-Islam's Logo-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHint"
            android:textColorHint="@color/foreground"
            android:textColor="@color/foreground"
            android:background="@drawable/input_outline"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10sp"
            android:paddingStart="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="10sp"
            android:paddingBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10sp"
                android:ems="8"
                android:fontFamily="@font/allerta_stencil"
                android:hint="@string/date"
                android:paddingTop="8sp"
                android:paddingBottom="8sp"
                android:textColor="@color/foreground"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="@color/foreground"/>

            <ImageButton
                android:id="@+id/btnDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10sp"
                android:ems="4"
                android:paddingStart="10sp"
                android:paddingTop="8sp"
                android:paddingEnd="10sp"
                android:paddingBottom="8sp"
                android:textColor="@color/foreground"
                android:textSize="20sp"
                android:src="@drawable/date"
                android:background="@drawable/round_button"
                android:layout_gravity="center"
                android:contentDescription="@string/date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp">

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10sp"
                android:ems="8"
                android:fontFamily="@font/allerta_stencil"
                android:hint="@string/time"
                android:paddingTop="8sp"
                android:paddingBottom="8sp"
                android:textColor="@color/foreground"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="@color/foreground"/>

            <ImageButton
                android:id="@+id/btnTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10sp"
                android:ems="4"
                android:paddingStart="10sp"
                android:paddingTop="8sp"
                android:paddingEnd="10sp"
                android:paddingBottom="8sp"
                android:textColor="@color/foreground"
                android:textSize="20sp"
                android:src="@drawable/time"
                android:background="@drawable/round_button"
                android:layout_gravity="center"
                android:contentDescription="@string/time" />
        </LinearLayout>

        <Button
            android:id="@+id/btnBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:background="@drawable/round_button"
            android:text="@string/bookApp"/>

        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:background="@drawable/round_button"
            android:text="@string/viewApp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>